// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer should report the existence of TSQuery matches 1`] = `
"// BETTERER RESULTS V1.
exports[\`tsquery no raw console.log\`] = {
  timestamp: 0,
  value: \`{
    \\"src/index.ts:4087252068\\": [
      [0, 0, 11, \\"TSQuery match\\", \\"3870399096\\"]
    ]
  }\`
};"
`;

exports[`betterer should report the existence of TSQuery matches 2`] = `
Array [
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"tsquery no raw console.log\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"tsquery no raw console.log\\" got checked for the first time! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked for the first time! 🎉",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"tsquery no raw console.log\\"!",
  " ☀️  betterer  warn  ⚠️  - ",
  "\\"tsquery no raw console.log\\" stayed the same. 😐",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked. 🤔",
  " ☀️  betterer  warn  ⚠️  - ",
  "1 thing stayed the same. 😐",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"tsquery no raw console.log\\"!",
  " ☀️  betterer  erro  🔥  - ",
  "\\"tsquery no raw console.log\\" got worse. 😔",
  "",
  " ☀️  betterer  warn  ⚠️  - ",
  "1 existing issue in \\"src/index.ts\\".",
  " ☀️  betterer  erro  🔥  - ",
  "1 new issue in \\"src/index.ts\\":",
  "
   TSQuery match 
  1 | console.log('foo');
> 2 | console.log('foo');
    | ^^^^^^^^^^^",
  "",
  "",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked. 🤔",
  " ☀️  betterer  erro  🔥  - ",
  "1 thing got worse. 😔",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"tsquery no raw console.log\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"tsquery no raw console.log\\" met its goal! 🎉",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked. 🤔",
  " ☀️  betterer  succ  ✅  - ",
  "1 thing got better! 😍",
  " ☀️  betterer  succ  ✅  - ",
  "\\"tsquery no raw console.log\\" met its goal! 🎉",
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  info  💬  - ",
  "running \\"tsquery no raw console.log\\"!",
  " ☀️  betterer  succ  ✅  - ",
  "\\"tsquery no raw console.log\\" has already met its goal! ✨",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked. 🤔",
  " ☀️  betterer  info  💬  - ",
  "1 thing got checked for the first time! 🎉",
  " ☀️  betterer  succ  ✅  - ",
  "\\"tsquery no raw console.log\\" met its goal! 🎉",
]
`;

exports[`betterer should throw if there is no configFilePath 1`] = `
Array [
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  erro  🔥  - ",
  "could not read \\"<project>/fixtures/test-betterer-tsquery-no-config-file-path/.betterer\\". 😔",
  " ☀️  betterer  erro  🔥  - ",
  "For \`@betterer/tsquery\` to work, you need to provide the path to a tsconfig.json file, e.g. \`'./tsconfig.json'\`. ❌",
  "",
]
`;

exports[`betterer should throw if there is no query 1`] = `
Array [
  "
   \\\\ | /     _          _   _                     
 '-.ooo.-'  | |__   ___| |_| |_ ___ _ __ ___ _ __ 
---ooooo--- | '_ \\\\ / _ \\\\ __| __/ _ \\\\ '__/ _ \\\\ '__|
 .-'ooo'-.  | |_) |  __/ |_| ||  __/ | |  __/ |   
   / | \\\\    |_.__/ \\\\___|\\\\__|\\\\__\\\\___|_|  \\\\___|_|   
 ",
  " ☀️  betterer  erro  🔥  - ",
  "could not read \\"<project>/fixtures/test-betterer-tsquery-no-query/.betterer\\". 😔",
  " ☀️  betterer  erro  🔥  - ",
  "For \`@betterer/tsquery\` to work, you need to provide a query, e.g. \`'CallExpression > PropertyAccessExpression'\`. ❌",
  "",
]
`;
